# omninexus-agent

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  package.json
.github/workflows/: release.yml
src/: main.rs
src/modules/: cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  network.rs  system.rs
