[package]
name = "agent"
version = "1.0.0"
edition = "2024"

[dependencies]
# Coleta de dados do sistema
sysinfo = "0.33.0"
# Serialização para JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
# Runtime assíncrono para o loop de envio
tokio = { version = "1", features = ["full"] }
wmi = "0.13"
# Precisamos dessas para o WMI funcionar
windows = { version = "0.58", features = ["Win32_System_Com", "Win32_System_Wmi"] }
